# pandas-workout

./: .gitignore  README.md  pyproject.toml
ch01/: ex03.ipynb
ch02/: ex10.ipynb  ex13.ipynb
ch03/: ex15.ipynb  ex16.ipynb  ex17.ipynb  ex18.ipynb  ex20.ipynb  s_and_p_close.csv
ch04/: ex21.ipynb  ex23.ipynb
ch05/: ex25.ipynb  ex26.ipynb  ex27_m.py
ch06/: ex29.ipynb  ex30.ipynb  ex31.ipynb
ch07/: ex32.ipynb  ex33.ipynb  ex34.ipynb  ex35.ipynb
ch08/: ex36.ipynb
ch09/: ex36.ipynb  ex37.ipynb  ex38.ipynb
ch1/: ex01.ipynb  ex02.ipynb  ex04.ipynb  ex05.ipynb  ex06.ipynb  ex07.ipynb
ch10/: ex39.ipynb  ex40.ipynb  ex41.ipynb  ex42.ipynb
ch11/: ex43.ipynb  ex44.ipynb  ex45.ipynb  ex46.ipynb  ex47.ipynb  ex47beyond.ipynb
ch12/: ex48.ipynb  ex49.ipynb  ex50.ipynb
ch13/: final_project.ipynb
ch2/: ex08.ipynb  ex09.ipynb  ex11.ipynb  ex12.ipynb  ex14.ipynb
ch3/: ex19.ipynb
ch4/: ex22.ipynb  ex24.ipynb
ch5/: ex27.ipynb  ex28.ipynb
