[project]
name = "pandas-workout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "lxml>=5.3.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "selenium>=4.26.1",
]
