[project]
name = "pandas-workout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "lxml>=5.3.0",
    "marimo[recommended]>=0.9.20",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "selenium>=4.26.1",
    "spacy>=3.7.5",
    "xlrd>=2.0.1",
]
